--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
 python:
   - '2.7'
+install:
+  - pip install requests
+  - pip install manage.py
 script: python -m unittest discover
+
