--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 python:
   - '2.7'
 install:
-  - pip install requests
-  - pip install manage.py
+  - pip install -e .
 script: python -m unittest discover
 
