chore: switch to GitHub Actions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests-html = "^0.10.0"
 requests = {extras = ["socks"], version = "^2.25.1"}
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
 
 [tool.poetry.scripts]
 goji = 'goji.commands:cli'
