--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.6"
 click = "^7.1.2"
 requests-html = "^0.10.0"
 requests = {extras = ["socks"], version = "^2.25.1"}
+toml = "^0.10.2"
+jsonschema = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
