--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,26 @@
-[tool.poetry]
+[project]
 name = "goji"
 version = "0.6.0"
 description = "Command line JIRA client"
-authors = ["Kyle Fuller <kyle@fuller.li>"]
-license = "BSD"
+requires-python = ">=3.9,<4.0"
+dependencies = [
+  "click (>=8.1.8,<9.0.0)",
+  "requests[socks] (>=2.27.1, < 3.0.0)",
+  "toml (>=0.10.2,<0.11.0)",
+  "jsonschema (>=4.23.0,<5.0.0)",
+]
+authors = [
+  { name = "Kyle Fuller", email = "kyle@fuller.li" }
+]
+license = { text = "BSD-2-Clause" }
+readme = "README.md"
 
-[tool.poetry.dependencies]
-python = "^3.9"
-click = "^8.1.8"
-requests = {extras = ["socks"], version = "^2.27.1"}
-toml = "^0.10.2"
-jsonschema = "^4.23.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^7.0.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 goji = 'goji.commands:cli'
 
+[tool.poetry.group.dev.dependencies]
+pytest = {version="^8.3.5"}
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0"]
 build-backend = "poetry.core.masonry.api"
